--- a/shared/i18n/locales/es_ES/translation.json
+++ b/shared/i18n/locales/es_ES/translation.json
@@ -898,6 +898,7 @@
   "Mention users and more": "Menciona usuarios y más",
   "Insert block": "Insertar bloque",
   "Continue with Passkey": "Continue with Passkey",
+  "Passkeys are not supported in the desktop app": "Passkeys are not supported in the desktop app",
   "Sign In": "Iniciar sesión",
   "Continue with Email": "Continuar con el correo electrónico",
   "Continue with {{ authProviderName }}": "Continuar con {{ authProviderName }}",
