--- a/shared/i18n/locales/cs_CZ/translation.json
+++ b/shared/i18n/locales/cs_CZ/translation.json
@@ -898,6 +898,7 @@
   "Mention users and more": "Zmínit uživatele a další",
   "Insert block": "Přidat blok",
   "Continue with Passkey": "Continue with Passkey",
+  "Passkeys are not supported in the desktop app": "Passkeys are not supported in the desktop app",
   "Sign In": "Přihlásit se",
   "Continue with Email": "Pokračovat pomocí e-mailu",
   "Continue with {{ authProviderName }}": "Pokračovat s {{ authProviderName }}",
