--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -898,6 +898,7 @@
   "Mention users and more": "Erwähne Benutzer und mehr",
   "Insert block": "Block einfügen",
   "Continue with Passkey": "Continue with Passkey",
+  "Passkeys are not supported in the desktop app": "Passkeys are not supported in the desktop app",
   "Sign In": "Anmelden",
   "Continue with Email": "Weiter mit E-Mail",
   "Continue with {{ authProviderName }}": "Weiter mit {{ authProviderName }}",
