--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -898,6 +898,7 @@
   "Mention users and more": "Menziona utenti e altro ancora",
   "Insert block": "Inserisci blocco",
   "Continue with Passkey": "Continue with Passkey",
+  "Passkeys are not supported in the desktop app": "Passkeys are not supported in the desktop app",
   "Sign In": "Accedi",
   "Continue with Email": "Continua con email",
   "Continue with {{ authProviderName }}": "Continua con {{ authProviderName }}",
