--- a/shared/i18n/locales/tr_TR/translation.json
+++ b/shared/i18n/locales/tr_TR/translation.json
@@ -898,6 +898,7 @@
   "Mention users and more": "Kullanıcılardan ve daha fazlasından bahset",
   "Insert block": "Blok ekle",
   "Continue with Passkey": "Continue with Passkey",
+  "Passkeys are not supported in the desktop app": "Passkeys are not supported in the desktop app",
   "Sign In": "Giriş Yap",
   "Continue with Email": "E-posta ile devam et",
   "Continue with {{ authProviderName }}": "{{ authProviderName }} ile devam et",
