--- a/shared/i18n/locales/uk_UA/translation.json
+++ b/shared/i18n/locales/uk_UA/translation.json
@@ -898,6 +898,7 @@
   "Mention users and more": "Згадати користувачів і більше",
   "Insert block": "Вставити блок",
   "Continue with Passkey": "Continue with Passkey",
+  "Passkeys are not supported in the desktop app": "Passkeys are not supported in the desktop app",
   "Sign In": "Увійти",
   "Continue with Email": "Продовжити з електронною поштою",
   "Continue with {{ authProviderName }}": "Продовжити з {{ authProviderName }}",
