--- a/shared/i18n/locales/zh_TW/translation.json
+++ b/shared/i18n/locales/zh_TW/translation.json
@@ -898,6 +898,7 @@
   "Mention users and more": "Mention users and more",
   "Insert block": "插入區塊",
   "Continue with Passkey": "Continue with Passkey",
+  "Passkeys are not supported in the desktop app": "Passkeys are not supported in the desktop app",
   "Sign In": "登入",
   "Continue with Email": "使用電子郵件以繼續",
   "Continue with {{ authProviderName }}": "使用 {{ authProviderName }} 以繼續",
