--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -898,6 +898,7 @@
   "Mention users and more": "Mention users and more",
   "Insert block": "Chèn khối",
   "Continue with Passkey": "Continue with Passkey",
+  "Passkeys are not supported in the desktop app": "Passkeys are not supported in the desktop app",
   "Sign In": "Đăng nhập",
   "Continue with Email": "Tiếp tục với email",
   "Continue with {{ authProviderName }}": "Tiếp tục với {{ authProviderName }}",
