fix: New German translations from Crowdin [ci skip]

--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -114,7 +114,7 @@
   "Could not leave document": "Dokument konnte nicht verlassen werden",
   "Apply template": "Vorlage übernehmen",
   "New emoji": "Neuer Emoji",
-  "Upload emoji": "Upload emoji",
+  "Upload emoji": "Emoji hochladen",
   "Disconnect": "Trennen",
   "Disconnect analytics": "Analytics trennen",
   "Home": "Startseite",
@@ -144,7 +144,7 @@
   "New Application": "Neue Anwendung",
   "This version of the document was deleted": "Diese Version des Dokuments wurde gelöscht",
   "Link copied": "Link wurde kopiert",
-  "Download revision": "Download revision",
+  "Download revision": "Version herunterladen",
   "Dark": "Dunkel",
   "Light": "Hell",
   "System": "System",
@@ -261,20 +261,20 @@
   "Viewed {{ timeAgo }}": "Angesehen {{ timeAgo }}",
   "File type not supported. Please use PNG, JPG, GIF, or WebP.": "Dateityp ist nicht unterstützt. Bitte verwende ein PNG, JPG, GIF oder WebP.",
   "File size too large. Maximum size is {{ size }}.": "Die Datei ist zu groß. Maximal erlaubte Größe {{ size }}.",
-  "Please enter a name for the emoji": "Please enter a name for the emoji",
-  "Please select an image file": "Please select an image file",
-  "Emoji created successfully": "Emoji created successfully",
+  "Please enter a name for the emoji": "Bitte geben Sie einen Namen für das Emoji ein",
+  "Please select an image file": "Bitte wählen Sie eine Bilddatei aus",
+  "Emoji created successfully": "Emoji erfolgreich erstellt",
   "Uploading": "Wird hochgeladen",
-  "Add emoji": "Add emoji",
-  "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.",
+  "Add emoji": "Emoji hinzufügen",
+  "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Quadratische Bilder mit transparenten Hintergründen funktionieren am besten. Wenn dein Bild zu groß ist, versuchen wir es für dich zu verändern.",
   "Upload an image": "Bild hochladen",
-  "Click or drag to replace": "Click or drag to replace",
-  "Drop the image here": "Drop the image here",
-  "Click, drop, or paste an image here": "Click, drop, or paste an image here",
-  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, or WebP up to {{ size }}",
-  "Choose a name": "Choose a name",
-  "name can only contain lowercase letters, numbers, and underscores.": "name can only contain lowercase letters, numbers, and underscores.",
-  "This emoji will be available as": "This emoji will be available as",
+  "Click or drag to replace": "Klicken oder ziehen, um zu ersetzen",
+  "Drop the image here": "Legen Sie das Foto hier ab",
+  "Click, drop, or paste an image here": "Bild hier anklicken, ablegen oder einfügen",
+  "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, oder WebP bis zu {{ size }}",
+  "Choose a name": "Wähle einen Namen",
+  "name can only contain lowercase letters, numbers, and underscores.": "Der Name darf nur Kleinbuchstaben, Zahlen und Unterstriche enthalten.",
+  "This emoji will be available as": "Dieses Emoji wird verfügbar sein als",
   "Module failed to load": "Modul konnte nicht geladen werden",
   "Loading Failed": "Laden fehlgeschlagen",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Leider konnte ein Teil der Software nicht geladen werden weil der Inhalt sich inzwischen geändert hat oder eine Abfrage nicht erfolgreich abgeschlossen werden konnte. Bitte neu laden.",
@@ -296,7 +296,7 @@
   "{{userName}} moved": "{{userName}} verschob",
   "Your file will be available in {{ location }} soon": "Ihre Datei wird in Kürze unter {{ location }} verfügbar sein",
   "View": "Anzeigen",
-  "A link to your file will be sent through email soon": "A link to your file will be sent through email soon",
+  "A link to your file will be sent through email soon": "Ein Link zu Ihrer Datei wird in Kürze per E-Mail gesendet",
   "Export started": "Export gestartet",
   "A ZIP file containing the images, and documents in the Markdown format.": "Eine ZIP-Datei, die die Bilder und Dokumente im Markdown Format enthält.",
   "A ZIP file containing the images, and documents as HTML files.": "Eine ZIP-Datei, die die Bilder und Dokumente im HTML Format enthält.",
@@ -305,14 +305,14 @@
   "You will receive an email when it's complete.": "Du erhältst eine E-Mail, sobald der Vorgang abgeschlossen ist.",
   "Include attachments": "Anhänge beifügen",
   "Including uploaded images and files in the exported data": "Einbeziehung hochgeladener Bilder und Dateien in die exportierten Daten",
-  "Include private collections": "Include private collections",
+  "Include private collections": "Private Sammlungen einbeziehen",
   "{{count}} more user": "{{count}} mehr Nutzer",
   "{{count}} more user_plural": "{{count}} weitere Nutzer",
   "Filter options": "Filteroptionen",
   "Filter": "Filter",
   "No results": "Keine Ergebnisse",
-  "{{ count }} members": "{{ count }} member",
-  "{{ count }} members_plural": "{{ count }} members",
+  "{{ count }} members": "{{ count }} Mitglied",
+  "{{ count }} members_plural": "{{ count }} Mitglieder",
   "{{authorName}} created <3></3>": "{{authorName}} hat <3></3> erstellt",
   "{{authorName}} opened <3></3>": "{{authorName}} hat <3></3> geöffnet",
   "Search emoji": "Emoji suchen",
@@ -346,7 +346,7 @@
   "View, navigate, or download images in the document": "Bilder im Dokument anzeigen, navigieren oder herunterladen",
   "Zoom in": "Vergrößern",
   "Zoom out": "Verkleinern",
-  "Edit diagram": "Edit diagram",
+  "Edit diagram": "Diagramm bearbeiten",
   "Close": "Schließen",
   "Previous": "Zurück",
   "Next": "Nächste",
@@ -355,19 +355,19 @@
   "Sorry, an error occurred.": "Tut uns leid, ein Fehler ist aufgetreten.",
   "Click to retry": "Erneut versuchen",
   "Back": "Zurück",
-  "Notification options": "Notification options",
+  "Notification options": "Benachrichtigungseinstellungen",
   "Unknown": "Unbekannt",
-  "Mentions": "Mentions",
-  "Comments and replies": "Comments and replies",
-  "Document events": "Document events",
-  "Collection events": "Collection events",
+  "Mentions": "Erwähnungen",
+  "Comments and replies": "Kommentare und Antworten",
+  "Document events": "Dokumentenereignisse",
+  "Collection events": "Ereignisse der Sammlung",
   "Mark all as read": "Alle als gelesen markieren",
   "You're all caught up": "Du bist auf dem neusten Stand",
-  "Client type": "Client type",
-  "Confidential": "Confidential",
-  "Suitable for server-side applications": "Suitable for server-side applications",
-  "Public": "Public",
-  "Suitable for client-side or mobile applications": "Suitable for client-side or mobile applications",
+  "Client type": "Client-Typ",
+  "Confidential": "Vertraulich",
+  "Suitable for server-side applications": "Geeignet für serverseitige Anwendungen",
+  "Public": "Öffentlich",
+  "Suitable for client-side or mobile applications": "Geeignet für Client-seitige oder mobile Anwendungen",
   "Icon": "Symbol",
   "OAuth client icon": "OAuth-Client-Symbol",
   "My App": "Meine Anwendung",
@@ -384,12 +384,12 @@
   "Reaction picker": "Reaktions-Auswahl",
   "Could not load reactions": "Reaktionen konnten nicht geladen werden",
   "Reaction": "Reaktion",
-  "{{ hours }}h {{ minutes }}m read": "{{ hours }}h {{ minutes }}m read",
-  "{{ hours }}h read": "{{ hours }}h read",
+  "{{ hours }}h {{ minutes }}m read": "{{ hours }} Stunden {{ minutes }} Minuten gelesen",
+  "{{ hours }}h read": "{{ hours }} Stunden gelesen",
   "{{ minutes }}m read": "{{ minutes }}m gelesen",
   "Revision deleted": "Überarbeitung gelöscht",
-  "{{count}} people": "{{count}} person",
-  "{{count}} people_plural": "{{count}} people",
+  "{{count}} people": "{{count}} Person",
+  "{{count}} people_plural": "{{count}} Personen",
   "Current version": "Aktuelle Version",
   "{{userName}} edited": "{{userName}} bearbeitete",
   "Revision options": "Version-Einstellungen",
@@ -478,7 +478,7 @@
   "Change permissions?": "Berechtigungen ändern?",
   "{{ documentName }} cannot be moved within {{ parentDocumentName }}": "{{ documentName }} kann nicht innerhalb von {{ parentDocumentName }} verschoben werden",
   "You can't reorder documents in an alphabetically sorted collection": "Du kannst Dokumente in einer alphabetisch sortierten Sammlung nicht neu anordnen",
-  "{{ documentName }} cannot be moved here": "{{ documentName }} cannot be moved here",
+  "{{ documentName }} cannot be moved here": "{{ documentName }} kann nicht hierher verschoben werden",
   "Return to App": "Zurück zur App",
   "Installation": "Installation",
   "Unstar document": "Favorisierung entfernen",
@@ -522,7 +522,7 @@
   "Profile picture": "Profilbild",
   "Create a new doc": "Neues Dokument erstellen",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} wird nicht benachrichtigt, da sie keinen Zugriff auf dieses Dokument haben",
-  "Members of \"{{ groupName }}\" that have access to this document will be notified": "Members of \"{{ groupName }}\" that have access to this document will be notified",
+  "Members of \"{{ groupName }}\" that have access to this document will be notified": "Mitglieder von \"{{ groupName }}\" die Zugriff auf dieses Dokument haben, werden benachrichtigt",
   "Keep as link": "Als Link beibehalten",
   "Mention": "Erwähnung",
   "Embed": "Einbetten",
@@ -559,7 +559,7 @@
   "Italic": "Kursiv",
   "Sorry, that link won’t work for this embed type": "Dieser Link funktioniert für diesen Einbettungstyp leider nicht",
   "File attachment": "Dateianhang",
-  "Embed PDF": "Embed PDF",
+  "Embed PDF": "Eingebettete PDF",
   "Enter a link": "Link eintragen",
   "Big heading": "Große Überschrift",
   "Medium heading": "Mittlere Überschrift",
@@ -613,15 +613,15 @@
   "Video": "Video",
   "None": "Keine",
   "Delete embed": "Einbindung löschen",
-  "Formatting controls": "Formatting controls",
-  "Distribute columns": "Distribute columns",
+  "Formatting controls": "Formatierungssteuerung",
+  "Distribute columns": "Spalten teilen",
   "Could not import file": "Datei konnte nicht importiert werden",
   "Unsubscribed from document": "Dokument nicht abonniert",
   "Unsubscribed from collection": "Von der Sammlung abgemeldet",
   "Account": "Konto",
   "API & Apps": "API & Anwendungen",
   "Details": "Details",
-  "Authentication": "Authentication",
+  "Authentication": "Authentifizierung",
   "Security": "Sicherheit",
   "Features": "Funktionen",
   "Members": "Mitglieder",
@@ -637,9 +637,9 @@
   "Comment options": "Kommentar Optionen",
   "Enable viewer insights": "Leserstatistiken aktivieren",
   "Enable embeds": "Einbettungen aktivieren",
-  "Delete Emoji": "Delete Emoji",
-  "Emoji deleted": "Emoji deleted",
-  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.",
+  "Delete Emoji": "Emoji löschen",
+  "Emoji deleted": "Emoji gelöscht",
+  "Are you sure you want to delete the <em>{{emojiName}}</em> emoji? You will no longer be able to use it in your documents or collections.": "Sind Sie sicher, dass Sie den <em>{{emojiName}}</em> Emoji löschen möchten? Sie können es nicht mehr in Ihren Dokumenten oder Sammlungen verwenden.",
   "File": "Datei",
   "Group members": "Gruppenmitglieder",
   "Edit group": "Gruppe bearbeiten",
@@ -673,7 +673,7 @@
   "edited": "bearbeitet",
   "created the collection": "Sammlung erstellt",
   "mentioned you in": "erwähnte dich in",
-  "mentioned your group in": "mentioned your group in",
+  "mentioned your group in": "erwähnte deine Gruppe in",
   "left a comment on": "hat einen Kommentar geschrieben zu",
   "resolved a comment on": "löste einen Kommentar auf",
   "reacted {{ emoji }} to your comment on": "reagierte mit {{ emoji }} auf Ihren Kommentar",
@@ -703,7 +703,7 @@
   "{{ groupsCount }} groups with access": "{{ groupsCount }} Gruppe mit Zugriff",
   "{{ groupsCount }} groups with access_plural": "{{ groupsCount }} Gruppen mit Zugriff",
   "Overview": "Übersicht",
-  "Popular": "Popular",
+  "Popular": "Beliebt",
   "Recently updated": "Vor Kurzem aktualisiert",
   "Recently published": "Vor Kurzem veröffentlicht",
   "Least recently updated": "Am längsten nicht aktualisiert",
@@ -713,12 +713,12 @@
   "Add a description": "Beschreibung hinzufügen",
   "Signing in": "Wird angemeldet",
   "You can safely close this window once the Outline desktop app has opened": "Du kannst dieses Fenster schließen, sobald die Outline Desktop-App geöffnet wurde",
-  "{{ current }} of {{ count }} changes": "{{ current }} of {{ count }} changes",
-  "{{ current }} of {{ count }} changes_plural": "{{ current }} of {{ count }} changes",
-  "{{ count }} changes": "{{ count }} change",
-  "{{ count }} changes_plural": "{{ count }} changes",
-  "Previous change": "Previous change",
-  "Next change": "Next change",
+  "{{ current }} of {{ count }} changes": "{{ current }} von {{ count }} Änderungen",
+  "{{ current }} of {{ count }} changes_plural": "{{ current }} von {{ count }} Änderungen",
+  "{{ count }} changes": "{{ count }} Zeichen",
+  "{{ count }} changes_plural": "{{ count }} Zeichen",
+  "Previous change": "Vorherige Änderung",
+  "Next change": "Nächste Änderung",
   "Error creating comment": "Fehler beim Erstellen des Kommentars",
   "Add a comment": "Kommentar hinzufügen",
   "Add a reply": "Antwort hinzufügen",
@@ -1316,11 +1316,11 @@
   "Where do I find the file?": "Where do I find the file?",
   "In a Confluence space, navigate to <em>Space Settings -> Manage space -> Export space</em> and choose to export as HTML with the \"Normal Export\" option.": "In a Confluence space, navigate to <em>Space Settings -> Manage space -> Export space</em> and choose to export as HTML with the \"Normal Export\" option.",
   "Drag and drop the zip file from Confluence's HTML export option, or click to upload": "Drag and drop the zip file from Confluence's HTML export option, or click to upload",
-  "Guests": "Guests",
-  "New Attribute": "New Attribute",
-  "Attributes allow you to define data to be stored with your documents. They can be used to store custom properties, metadata, or any other structured information that is common across documents.": "Attributes allow you to define data to be stored with your documents. They can be used to store custom properties, metadata, or any other structured information that is common across documents.",
-  "Custom domain": "Custom domain",
-  "AI answers": "AI answers",
+  "Guests": "Gäste",
+  "New Attribute": "Neues Attribut",
+  "Attributes allow you to define data to be stored with your documents. They can be used to store custom properties, metadata, or any other structured information that is common across documents.": "Attribute erlauben es Ihnen, Daten zu definieren, die mit Ihren Dokumenten gespeichert werden sollen. Sie können verwendet werden, um benutzerdefinierte Eigenschaften, Metadaten oder andere strukturierte Informationen zu speichern, die in Dokumenten üblich sind.",
+  "Custom domain": "Benutzerdefinierte Domain",
+  "AI answers": "KI-Antworten",
   "Use AI to directly answer searched questions using content in your workspace.": "Use AI to directly answer searched questions using content in your workspace.",
   "API access": "API access",
   "Allow members to create API keys for programmatic access": "Allow members to create API keys for programmatic access",
