fix: New German translations from Crowdin [ci skip]

--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -834,8 +834,8 @@
   "Documents with recent activity will appear here": "Documents with recent activity will appear here",
   "You haven’t created any documents yet": "Du hast noch keine Dokumente erstellt",
   "Documents you’ve recently viewed will be here for easy access": "Dokumente, die du dir kürzlich angesehen hast, sind hier für einen einfachen Zugriff verfügbar",
-  "{{ count }} invites sent": "{{ count }} invites sent",
-  "{{ count }} invites sent_plural": "{{ count }} invites sent",
+  "{{ count }} invites sent": "{{ count }} Einladung versendet",
+  "{{ count }} invites sent_plural": "{{ count }} Einladungen versendet",
   "Those email addresses are already invited": "Diese E-Mail-Adressen sind bereits eingeladen",
   "Sorry, you can only send {{MAX_INVITES}} invites at a time": "Du kannst leider nur {{MAX_INVITES}} Einladungen gleichzeitig senden",
   "Invited {{roleName}} will receive access to": "Eingeladene {{roleName}} erhalten Zugriff auf",
@@ -1310,9 +1310,9 @@
   "Can view only what is explicitly shared": "Can view only what is explicitly shared",
   "SAML assertion was invalid or missing fields, please check your configuration": "SAML assertion was invalid or missing fields, please check your configuration",
   "AI generated answer based on related documents in your workspace": "AI generated answer based on related documents in your workspace",
-  "References": "References",
+  "References": "Verweise",
   "Enable AI answers to get direct answers to searched questions.": "Enable AI answers to get direct answers to searched questions.",
-  "Go to settings": "Go to settings",
+  "Go to settings": "Zu den Einstellungen",
   "Where do I find the file?": "Where do I find the file?",
   "In a Confluence space, navigate to <em>Space Settings -> Manage space -> Export space</em> and choose to export as HTML with the \"Normal Export\" option.": "In a Confluence space, navigate to <em>Space Settings -> Manage space -> Export space</em> and choose to export as HTML with the \"Normal Export\" option.",
   "Drag and drop the zip file from Confluence's HTML export option, or click to upload": "Drag and drop the zip file from Confluence's HTML export option, or click to upload",
@@ -1322,7 +1322,7 @@
   "Custom domain": "Benutzerdefinierte Domain",
   "AI answers": "KI-Antworten",
   "Use AI to directly answer searched questions using content in your workspace.": "Use AI to directly answer searched questions using content in your workspace.",
-  "API access": "API access",
+  "API access": "API Zugriff",
   "Allow members to create API keys for programmatic access": "Allow members to create API keys for programmatic access",
   "Public document embedding": "Public document embedding",
   "When enabled, publicly shared documents can be embedded in third-party websites": "When enabled, publicly shared documents can be embedded in third-party websites",
@@ -1331,17 +1331,17 @@
   "Boolean": "Boolean",
   "Number": "Nummer",
   "Text": "Text",
-  "List": "List",
+  "List": "Liste",
   "Could not load events": "Konnte Ereignisse nicht laden",
   "Audit Log": "Audit-Log",
   "The audit log details the history of security related and other events across your knowledge base.": "The audit log details the history of security related and other events across your knowledge base.",
   "IP address": "IP-Adresse",
-  "Actor": "Actor",
+  "Actor": "Akteur",
   "Event": "Event",
   "Timestamp": "Zeitstempel",
   "IP": "IP",
   "a group": "eine Gruppe",
-  "All users": "All users",
+  "All users": "Alle Nutzer",
   "Private": "Privat",
   "View and edit": "Anzeigen und bearbeiten",
   "Sharing enabled": "Freigabe aktiviert",
@@ -1355,8 +1355,8 @@
   "Details of the current {{appName}} license. To arrange contract renewal as expiry or seat limits approach or increase licensed seats please contact your account manager or email <4>priority@getoutline.com</4>.": "Details of the current {{appName}} license. To arrange contract renewal as expiry or seat limits approach or increase licensed seats please contact your account manager or email <4>priority@getoutline.com</4>.",
   "Sorry, an answer could not be found in the collection, try widening your search.": "Leider konnte in der Sammlung keine Antwort gefunden werden. Versuchen Sie die Suche zu erweitern.",
   "Sorry, an answer could not be found in the workspace, try widening your search.": "Leider konnte im Arbeitsbereich keine Antwort gefunden werden. Versuchen Sie die Suche zu erweitern.",
-  "Looking for answers": "Looking for answers",
-  "Answer to \"{{ query }}\"": "Answer to \"{{ query }}\"",
+  "Looking for answers": "Suche nach Antworten",
+  "Answer to \"{{ query }}\"": "Antwort auf \"{{ query }}\"",
   "Whoops, you need to accept the permissions in GitHub to connect {{appName}} to your workspace. Try again?": "Hoppla, du musst die Berechtigungen in GitHub akzeptieren, um {{appName}} mit deinem Team zu verbinden. Nochmal versuchen?",
   "Something went wrong while authenticating your request. Please try logging in again.": "Bei der Authentifizierung der Anfrage ist ein Fehler aufgetreten. Bitte versuche dich erneut anzumelden.",
   "The owner of GitHub account has been requested to install the {{githubAppName}} GitHub app. Once approved, previews will be shown for respective links.": "Der Besitzer des GitHub Kontos wurde aufgefordert, die {{githubAppName}} GitHub App zu installieren. Sobald diese genehmigt ist, werden Vorschaubilder für entsprechende Links angezeigt.",
@@ -1380,26 +1380,26 @@
   "An ID that uniquely identifies the website in your Matomo instance.": "Eine ID, welche die Website in Ihrer Matomo-Instanz eindeutig identifiziert.",
   "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?": "Huch, du musst die Berechtigungen in Notion akzeptieren, um {{ appName }} mit deinem Arbeitsbereich zu verbinden. Möchtest du es noch einmal versuchen?",
   "Import pages from Notion": "Importieren Sie Seiten von Notion",
-  "Passkey options": "Passkey options",
-  "Registered {{ timeAgo }}": "Registered {{ timeAgo }}",
-  "Passkey updated": "Passkey updated",
-  "Failed to update passkey. Please try again.": "Failed to update passkey. Please try again.",
+  "Passkey options": "Passkey-Optionen",
+  "Registered {{ timeAgo }}": "Registriert {{ timeAgo }}",
+  "Passkey updated": "Passkey aktualisiert",
+  "Failed to update passkey. Please try again.": "",
   "Give your passkey a memorable name to easily identify it.": "Give your passkey a memorable name to easily identify it.",
-  "Enter passkey name": "Enter passkey name",
-  "Failed to load passkeys": "Failed to load passkeys",
-  "Passkey added successfully": "Passkey added successfully",
+  "Enter passkey name": "Passkey Name eingeben",
+  "Failed to load passkeys": "Fehler beim Laden von Passkeys",
+  "Passkey added successfully": "Passkey wurde erfolgreich hinzugefügt",
   "Failed to register passkey. Please try again.": "Failed to register passkey. Please try again.",
-  "Rename passkey": "Rename passkey",
-  "Delete passkey": "Delete passkey",
+  "Rename passkey": "Passkey umbenennen",
+  "Delete passkey": "Passkey löschen",
   "Passkey deleted successfully": "Passkey deleted successfully",
   "Failed to delete passkey. Please try again.": "Failed to delete passkey. Please try again.",
   "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.": "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.",
-  "Registering": "Registering",
-  "Add Passkey": "Add Passkey",
+  "Registering": "Registrierung läuft",
+  "Add Passkey": "Passkey hinzufügen",
   "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.": "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.",
   "Sign-in with Passkey is currently disabled for this team.": "Sign-in with Passkey is currently disabled for this team.",
   "Enable for all users in Settings -> Authentication.": "Enable for all users in Settings -> Authentication.",
-  "Contact a workspace admin to enable it.": "Contact a workspace admin to enable it.",
+  "Contact a workspace admin to enable it.": "Kontaktieren Sie einen Workspace-Administrator, um es zu aktivieren.",
   "You don't have any passkeys yet.": "You don't have any passkeys yet.",
   "Add to Slack": "Zu Slack hinzufügen",
   "document published": "Dokument veröffentlicht",
@@ -1458,8 +1458,8 @@
   "You created {{ timeAgo }}": "Du hast vor {{ timeAgo }} erstellt",
   "{{ user }} created {{ timeAgo }}": "{{ user }} erstellte vor {{ timeAgo }}",
   "Caption": "Beschriftung",
-  "Empty diagram": "Empty diagram",
-  "Double click to edit": "Double click to edit",
+  "Empty diagram": "Leeres Diagramm",
+  "Double click to edit": "Doppelklick zum Bearbeiten",
   "Open": "Öffnen",
   "Error loading data": "Fehler beim Laden der Daten"
 }
