fix: New German translations from Crowdin [ci skip]

--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -1309,25 +1309,25 @@
   "Invited {{roleName}} will not receive access to any collections or documents unless explicitly shared.": "Invited {{roleName}} will not receive access to any collections or documents unless explicitly shared.",
   "Can view only what is explicitly shared": "Can view only what is explicitly shared",
   "SAML assertion was invalid or missing fields, please check your configuration": "SAML assertion was invalid or missing fields, please check your configuration",
-  "AI generated answer based on related documents in your workspace": "AI generated answer based on related documents in your workspace",
+  "AI generated answer based on related documents in your workspace": "KI generierte Antwort basierend auf zugehörigen Dokumenten in Ihrem Arbeitsbereich",
   "References": "Verweise",
-  "Enable AI answers to get direct answers to searched questions.": "Enable AI answers to get direct answers to searched questions.",
+  "Enable AI answers to get direct answers to searched questions.": "Aktivieren Sie die KI-Antworten, um direkte Antworten auf gesuchte Fragen zu erhalten.",
   "Go to settings": "Zu den Einstellungen",
-  "Where do I find the file?": "Where do I find the file?",
+  "Where do I find the file?": "Wo finde ich die Datei?",
   "In a Confluence space, navigate to <em>Space Settings -> Manage space -> Export space</em> and choose to export as HTML with the \"Normal Export\" option.": "In a Confluence space, navigate to <em>Space Settings -> Manage space -> Export space</em> and choose to export as HTML with the \"Normal Export\" option.",
-  "Drag and drop the zip file from Confluence's HTML export option, or click to upload": "Drag and drop the zip file from Confluence's HTML export option, or click to upload",
+  "Drag and drop the zip file from Confluence's HTML export option, or click to upload": "Ziehen Sie die Zip-Datei des Confluence HTML-Exports hier hinein oder klicken Sie zum Hochladen",
   "Guests": "Gäste",
   "New Attribute": "Neues Attribut",
   "Attributes allow you to define data to be stored with your documents. They can be used to store custom properties, metadata, or any other structured information that is common across documents.": "Attribute erlauben es Ihnen, Daten zu definieren, die mit Ihren Dokumenten gespeichert werden sollen. Sie können verwendet werden, um benutzerdefinierte Eigenschaften, Metadaten oder andere strukturierte Informationen zu speichern, die in Dokumenten üblich sind.",
   "Custom domain": "Benutzerdefinierte Domain",
   "AI answers": "KI-Antworten",
-  "Use AI to directly answer searched questions using content in your workspace.": "Use AI to directly answer searched questions using content in your workspace.",
+  "Use AI to directly answer searched questions using content in your workspace.": "Benutzen Sie die KI um Ihre Fragen direkt mit Inhalten in Ihrem Arbeitsbereich zu beantworten.",
   "API access": "API Zugriff",
-  "Allow members to create API keys for programmatic access": "Allow members to create API keys for programmatic access",
-  "Public document embedding": "Public document embedding",
-  "When enabled, publicly shared documents can be embedded in third-party websites": "When enabled, publicly shared documents can be embedded in third-party websites",
-  "Include previews in emails": "Include previews in emails",
-  "When enabled, email notifications will include content previews": "When enabled, email notifications will include content previews",
+  "Allow members to create API keys for programmatic access": "Mitgliedern erlauben, API-Schlüssel für den programmatischen Zugriff zu generieren",
+  "Public document embedding": "Öffentliche Einbettung von Dokumenten",
+  "When enabled, publicly shared documents can be embedded in third-party websites": "Wenn aktiviert, können öffentlich geteilte Dokumente in Websites von Drittanbietern eingebunden werden",
+  "Include previews in emails": "Inhaltsvorschau in E-Mails einbeziehen",
+  "When enabled, email notifications will include content previews": "Wenn aktiviert, werden E-Mail-Benachrichtigungen eine Inhaltsvorschau enthalten",
   "Boolean": "Boolean",
   "Number": "Nummer",
   "Text": "Text",
@@ -1384,23 +1384,23 @@
   "Registered {{ timeAgo }}": "Registriert {{ timeAgo }}",
   "Passkey updated": "Passkey aktualisiert",
   "Failed to update passkey. Please try again.": "",
-  "Give your passkey a memorable name to easily identify it.": "Give your passkey a memorable name to easily identify it.",
+  "Give your passkey a memorable name to easily identify it.": "Geben Sie Ihrem Passkey einen leicht einzuprägenden Namen, um diesen einfach zu erkennen.",
   "Enter passkey name": "Passkey Name eingeben",
   "Failed to load passkeys": "Fehler beim Laden von Passkeys",
   "Passkey added successfully": "Passkey wurde erfolgreich hinzugefügt",
-  "Failed to register passkey. Please try again.": "Failed to register passkey. Please try again.",
+  "Failed to register passkey. Please try again.": "Fehler beim Registrieren des Passkey. Bitte versuche es erneut.",
   "Rename passkey": "Passkey umbenennen",
   "Delete passkey": "Passkey löschen",
-  "Passkey deleted successfully": "Passkey deleted successfully",
-  "Failed to delete passkey. Please try again.": "Failed to delete passkey. Please try again.",
-  "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.": "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.",
+  "Passkey deleted successfully": "Passkey wurde erfolgreich gelöscht",
+  "Failed to delete passkey. Please try again.": "Passkey konnte nicht gelöscht werden. Bitte versuchen Sie es erneut.",
+  "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.": "Sind Sie sicher, dass Sie diesen Passkey löschen möchten? Sie können es nicht mehr verwenden, um sich anzumelden.",
   "Registering": "Registrierung läuft",
   "Add Passkey": "Passkey hinzufügen",
-  "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.": "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.",
-  "Sign-in with Passkey is currently disabled for this team.": "Sign-in with Passkey is currently disabled for this team.",
+  "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.": "Passkeys erlauben die sichere Anmeldung ohne Passwort mittels biometrischer Authentifizierung (Face ID, Touch-ID, Windows Hallo) oder Sicherheitsschlüssel.",
+  "Sign-in with Passkey is currently disabled for this team.": "Die Anmeldung mit Passkey ist für dieses Team derzeit deaktiviert.",
   "Enable for all users in Settings -> Authentication.": "Enable for all users in Settings -> Authentication.",
   "Contact a workspace admin to enable it.": "Kontaktieren Sie einen Workspace-Administrator, um es zu aktivieren.",
-  "You don't have any passkeys yet.": "You don't have any passkeys yet.",
+  "You don't have any passkeys yet.": "Sie haben noch keine Passkeys angelegt.",
   "Add to Slack": "Zu Slack hinzufügen",
   "document published": "Dokument veröffentlicht",
   "document updated": "Dokument aktualisiert",
